--- a/src/app/modules/our-services/our-services/our-services.component.scss
+++ b/src/app/modules/our-services/our-services/our-services.component.scss
@@ -14,6 +14,21 @@
     // color: #f05d23;
     margin-bottom: 10px;
   }
+  .services_heading {
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .services_heading span {
+    display: block;
+    width: 50px; /* Adjust the line length */
+    height: 2px; /* Adjust the line thickness */
+    background-color: orange; /* Adjust the line color */
+  }
+  
   
   .header h1 {
     font-size: 2.5rem;
@@ -140,7 +155,7 @@
     margin-top: 15px;
 }
 .h300{
-    height: 300px;
+    height: 400px;
 }
 .build-project-bg-color{
     background: #564548;
